@@ -1,15 +1,15 @@
 from ftw.builder.session import BuilderSession
 from ftw.builder.testing import BUILDER_LAYER
 from ftw.builder.testing import set_builder_session_factory
-from ftw.testing import FunctionalSplinterTesting
 from ftw.testing.layer import COMPONENT_REGISTRY_ISOLATION
 from plone.app.testing import applyProfile
+from plone.app.testing import FunctionalTesting
 from plone.app.testing import IntegrationTesting
 from plone.app.testing import PloneSandboxLayer
 from plone.testing.z2 import installProduct
 from zope.component import eventtesting
 from zope.configuration import xmlconfig
-import ftw.file.tests.builders
+import ftw.file.tests.builders  # noqa
 
 
 def functional_session_factory():
@@ -44,7 +44,7 @@ FTW_FILE_FIXTURE = FtwFileLayer()
 FTW_FILE_INTEGRATION_TESTING = IntegrationTesting(
     bases=(FTW_FILE_FIXTURE, ), name="ftw.file:Integration")
 
-FTW_FILE_FUNCTIONAL_TESTING = FunctionalSplinterTesting(
+FTW_FILE_FUNCTIONAL_TESTING = FunctionalTesting(
     bases=(FTW_FILE_FIXTURE,
            set_builder_session_factory(functional_session_factory)),
     name="ftw.file:Functional")
