@@ -5,7 +5,8 @@ Changelog
 1.13.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Rewrite download redirection tests using ftw.testbrowser, drop dependency on
+  ftw.testing[splinter]. [lgraf]
 
 
 1.13.0 (2017-05-15)
